--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 Django==4.1.4
 django-crispy-forms==1.14.0
+dj-database-url==1.2.0
 gunicorn==20.1.0
 psycopg2==2.9.5
 Pillow==9.4.0
